[gd_scene load_steps=9 format=2]

[ext_resource path="res://styling/button_style/CloseButton_normal.stylebox" type="StyleBox" id=1]
[ext_resource path="res://styling/button_style/ApplyButton_normal.stylebox" type="StyleBox" id=2]
[ext_resource path="res://styling/button_style/CloseButton_hover.stylebox" type="StyleBox" id=3]
[ext_resource path="res://styling/button_style/ApplyButton_hover.stylebox" type="StyleBox" id=4]
[ext_resource path="res://logic/GameModeMenu.gd" type="Script" id=5]
[ext_resource path="res://styling/button_style/CloseButton_pressed.stylebox" type="StyleBox" id=6]
[ext_resource path="res://styling/fonts/NotoSans.tres" type="DynamicFont" id=7]
[ext_resource path="res://styling/button_style/ApplyButton_pressed.stylebox" type="StyleBox" id=8]

[node name="GameModeMenu" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 600 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 560.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 7 )
text = "Select a gamemode"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameModeList" type="ItemList" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 560.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoButton" type="Button" parent="HBoxContainer"]
margin_right = 298.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "Go!"

[node name="CloseButton" type="Button" parent="HBoxContainer"]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 7 )
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="HBoxContainer/GoButton" to="." method="_on_GoButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
